<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <TextView
            style="@style/FormTextfield"
            android:text="@string/instock_entry" />

         <TextView
            android:id="@+id/inoroutEntryTextView"
            style="@style/FormTextfield"
            android:text="@string/text_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/inoroutTypeTextView"
            style="@style/FormTextfield"
            android:text="@string/instock_type" />

        <ImageView
            android:id="@+id/inoroutTypeImage"
            style="@style/FormTextfield" 
            android:contentDescription="@string/instock_type"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/inoroutUsableAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >
    	<TextView
            style="@style/FormTextfield"
            android:text="@string/inorout_usable_amount" />
        
        <TextView
            android:id="@+id/inoroutUsableAmountTextView"
            style="@style/FormTextfield"
            android:text="@string/text_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            style="@style/FormTextfield"
            android:text="@string/instock_amount" />

        <EditText
            android:id="@+id/inoroutAmountEdittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:lines="1"
            android:singleLine="true"
            android:inputType="number" />

        <TextView
            android:id="@+id/inoroutUnitTextview"
            style="@style/FormTextfield"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/text_default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/inoroutWarehouseTextview"
            style="@style/FormTextfield"
            android:text="@string/instock_warehouse" />

        <Spinner
            android:id="@+id/inoroutWarehouseSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            style="@style/FormTextfield"
            android:text="@string/instock_remark" />

    </LinearLayout>

    <EditText
        android:id="@+id/inoroutRemarkEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/instock_remark_hint" />
	
</LinearLayout>
</ScrollView>