<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <EditText 
        android:id="@+id/currentSearchText" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:hint = "@string/search_text" 
        android:ems="10" >  
    </EditText> 
    
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
    
	    <Button
		    android:id="@+id/currentTypeButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/sort_type" />
		<Button
		    android:id="@+id/currentEntryButton"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/sort_entry" />
    
	</LinearLayout>
	
    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>